--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ rand = "0.8.5"
 anyhow = "1.0.75"
 dotenv = "0.15.0"
 futures = "0.3.29"
+log = "0.4.20"
+mylogger = { git = "https://github.com/ryo2357/rs-mylogger" }
