非同期関数の開始停止処理を書き直し

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,9 @@
           "titleBar.activeBackground": "#00ff371c", // タイトルバーの背景色
         }
       },
-      "extensions": []
+      "extensions": [
+        "Gruntfuggly.todo-tree"
+      ]
     }
   }
 }
