--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,12 +2,17 @@ version: '3.3'
 services:
   gateway_dev:
     image: mcr.microsoft.com/devcontainers/rust
+
     volumes:
       - ./:/workspace:cached
     command: sleep infinity
-    # データベースアクセスのため追加
     depends_on:
       - influxdb
       - grafana
-    networks:
-      - network
+    # ホストに複数NICがあるのでブリッジに失敗してると予想
+    # composeで管理できない
+    # network をbridgeではなくhostにしたんでこのコンテナからinfluxdbコンテナを呼び出すには
+    # http://influxdb:8086 ではなく http://localhost:8086
+    network_mode: "host"
+    # networks:
+    #   - network
