--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ num-traits = "0.2"
 tokio = { version = "1.34.0", features = ["full"] }
 chrono = "0.4.31"
 rand = "0.8.5"
-anyhow = "1.0.75"
+anyhow = { version = "1", features = ["backtrace"] }
 dotenv = "0.15.0"
 futures = "0.3.29"
 log = "0.4.20"
