--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
       },
       "extensions": [
         "Gruntfuggly.todo-tree",
-        "streetsidesoftware.code-spell-checker"
+        "streetsidesoftware.code-spell-checker",
+        "GitHub.vscode-pull-request-github"
       ]
     }
   }
