devcontainerにmarkdown用の拡張機能の追加する Fixes #6

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,8 @@
       "extensions": [
         "Gruntfuggly.todo-tree",
         "streetsidesoftware.code-spell-checker",
-        "GitHub.vscode-pull-request-github"
+        "GitHub.vscode-pull-request-github",
+        "yzhang.markdown-all-in-one"
       ]
     }
   }
