Grafanaで稼働率を算出できるようなデータに実装する Fixes #8
データ算出方法・タイムゾーンの修正

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,5 +14,7 @@ services:
     # network をbridgeではなくhostにしたんでこのコンテナからinfluxdbコンテナを呼び出すには
     # http://influxdb:8086 ではなく http://localhost:8086
     network_mode: "host"
+    environment:
+      - TZ=Asia/Tokyo
     # networks:
     #   - network
